--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla Todo</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <script src="src/todo.js"></script>
-  </body>
- 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vanilla Todo</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- clock -->
+  <h1 id="clock">00:00:00</h1>
+
+  <!-- login -->
+  <form class="hidden" id="login-form">
+    <input required maxlength="10" type="text" placeholder="name" />
+    <input required maxlength="10" type="text" placeholder="비밀번호" />
+    <input type="submit" value="login" />
+  </form>
+
+  <!-- todolist -->
+  <h1>To Do List</h1>
+
+  <!-- list_input -->
+  <div class="container">
+    <input id="inputField" placeholder="할 일을 입력해주세요." type="text" autofocus>
+    <button id="addToDo"> + </button>
+  </div>
+  
+  <!-- lists -->
+  <div class="todoList">
+    
+    <div class="todos">
+      <span class="sub_title" id="todo_len">To Do : 0</span>
+      <ul class="todo_lists"></ul>
+    </div>
+
+    <div class="dones">
+      <span class="sub_title" id="done_len">Done : 0</span>
+      <ul class="done_lists"></ul>
+    </div>
+
+  </div>
+
+  <script src="src/todo.js"></script>
+</body>
+
 </html>
