feat: todo, done list click함수 구현

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     
     <div class="todos">
       <span class="sub_title" id="todo_len">To Do : 0</span>
-      <ul class="todo_lists"></ul>
+      <ul id="todo_lists"></ul>
     </div>
 
     <div class="dones">
       <span class="sub_title" id="done_len">Done : 0</span>
-      <ul class="done_lists"></ul>
+      <ul id="done_lists"></ul>
     </div>
 
   </div>
