--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vanilla Todo</title>
   <link rel="stylesheet" href="style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
 </head>
 
 <body>
@@ -25,25 +29,36 @@
   <!-- list_input -->
   <div class="container">
     <input id="inputField" placeholder="할 일을 입력해주세요." type="text" autofocus>
-    <button id="addToDo"> + </button>
+    <button id="addButton"> + </button>
   </div>
   
   <!-- lists -->
   <div class="todoList">
     
     <div class="todos">
-      <span class="sub_title" id="todo_len">To Do : 0</span>
-      <ul id="todo_lists"></ul>
-    </div>
+      <span class="sub_title" id="todo_num">To Do : 0</span>
+      <ul id="todo_lists">
+       <!-- <div class="todo-list">
+        <i class="todo-check fa-solid fa-check"></i>
+        new todo
+        <i class="todo-delete fa-solid fa-trash"></i> -->
+      </div>
+    </ul>
+  </div>
 
     <div class="dones">
-      <span class="sub_title" id="done_len">Done : 0</span>
-      <ul id="done_lists"></ul>
+      <span class="sub_title" id="done_num">Done : 0</span>
+      <ul id="done_lists">
+        <!-- <i class="todo-check fa-solid fa-check"></i>
+        <i class="todo-delete fa-solid fa-trash"></i> -->
+      </ul>
     </div>
 
   </div>
 
   <script src="src/todo.js"></script>
+  <script src = "src/clock.js"></script>
+  
 </body>
 
 </html>
